--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   firebase_core: ^2.31.0
   firebase_messaging: ^14.9.2
   flutter_local_notifications: ^17.1.2
+  
+  # Local storage for preferences
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
